# memento

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  source-hashes.json
memento-workflow/: .mcp.json  CLAUDE.md  README.md  pyproject.toml  serve.py
memento-workflow/.claude-plugin/: plugin.json
memento-workflow/dashboard/: api.py  app.py  data.py
memento-workflow/docs/: DESIGN.md  YAML-DSL.md
memento-workflow/hooks/: hooks.json
memento-workflow/scripts/: actions.py  artifacts.py  checkpoint.py  cleanup.py  cli.py  compiler.py  core.py  engine.py  loader.py  protocol.py  runner.py  server.py  state.py  types.py  utils.py
memento-workflow/scripts/engine/: actions.py  child_runs.py  core.py  parallel.py  protocol.py  state.py  subworkflow.py  types.py  workflow_runner.py
memento-workflow/scripts/hooks/: relay_watchdog.py
memento-workflow/scripts/infra/: checkpoint.py  (+4 more)
memento-workflow/tests/: conftest.py  scenario_driver.py  test_artifacts.py  test_blocks.py  test_cache_prompt.py  test_cleanup.py  test_create_protocol_edit.py  test_dashboard.py  test_e2e.py  test_eviction_safety.py  test_mcp_checkpoint.py  test_mcp_children.py  test_mcp_parallel.py  test_mcp_tools.py  test_nested_parallel.py  test_relay_protocol_docs.py  test_relay_watchdog.py  test_sandbox.py  test_state_machine.py  test_substitution.py  test_test_workflow_scenarios.py  test_types.py  test_workflow_compiler.py  test_workflow_correctness.py  test_workflow_e2e.py  test_workflow_engine.py  test_workflow_hardening.py  test_workflow_mcp_tools.py  test_workflow_state_machine.py
(+363 files in other folders)
