[project]
name = "memento-workflow"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "websockets>=13.0",
]

[tool.pyright]
# pyright stops at the first pyproject.toml it finds, so we repeat the setting here.
reportIncompatibleVariableOverride = false
